[package]
name = "nats-jwt"
version = "0.2.0"
edition = "2018"
description = "JWT library for creating NATS JWTs"
authors = ["James Birtles <jamesb@airca.st>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["jwt", "nats", "nkey", "nkeys"]
categories = ["api-bindings", "authentication"]
repository = "https://github.com/AircastDev/nats-jwt"
rust-version = "1.58"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
data-encoding = "2.3"
nkeys = "0.2"
